Game class aangepast zodat alle cards aan de game worden toegevoegd bij het drawen van cards.